Fix title wording in self-forcing section

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ const COMPARE_SECTIONS = [
 
   {
     key: "selfforcing",
-    title: "Self-Forcing (Autoregressive Video): Vanilla vs StableWorld",
+    title: "Self-Forcing (Autoregressive Video): Vanilla and StableWorld",
     leftLabel: "Vanilla (Self-Forcing)",
     rightLabel: "StableWorld",
     leftBase: HF_ROOT_BASE + "selfforcing/bad/", // TODO
