--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ const COMPARE_SECTIONS = [
 
   {
     key: "selfforcing",
-    title: "Self-Forcing (Autoregressive Video): Vanilla and StableWorld",
+    title: "Self-Forcing (Autoregressive Video generation): Vanilla and StableWorld",
     leftLabel: "Vanilla (Self-Forcing)",
     rightLabel: "StableWorld",
     leftBase: HF_ROOT_BASE + "selfforcing/bad/", // TODO
